solc_mutator_ossfuzz_seed_corpus/test_sol/test_9925d805204b71dffe9d6c4aed21e23184f7605720d5c07fb44a9fc62c43a676_6f8576dca3c0ba951813c163e44180583b3481e2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  uint200 s0;
  int64 s1;
  constructor(uint200 i0,int64 i1)  {
    int112(1374290723808671122285263944037952);
    {

      (uint224 l0, uint192 l1, bytes14 l2, uint168 l3) = abi.decode("6da47bbfb3659c6fee5657d3", (uint224, uint192, bytes14, uint168));
      i0 -= abi.decode("c6eb3f816539f6c57c", (uint200));

      i0 %= (s0++ ^ ((uint200((uint200((abi.decode(abi.decode(address(0x7e1C3a3A12523ee1309F804BB05d34E0fA6f1BDF).code, (bytes)), (uint200)) / uint200((((((--s0 ** ((((((type(uint200).min | (abi.decode("434f49a94cba508b2aa79001b9d6e7236010bc5bd8a9688439d667d666ccab5a2f71862161b2", (uint200)) ^ uint200(1155639434354832461474080605470247627659108302041359502495263))) - ~((((uint200(640775860267732972449350549468641713105466765202747645433610) << uint200(448685588739536026760694265376660646200313956313987308573367)) & uint200(1196360507021198657136768429148960979099954952159104264230513)) ^ uint200(111641756257247061326345805213861270404388634406422658158716)))) ^ uint200(169418234404925190550953187055232289752720686345702965970104)) & uint200(208284526465890555621988167541425138570386357052822463092743)) & uint200(1561339601146377900947401457063136073247094473532638521151527)) ** uint200(1150196159137618168742257994592995443633128412841866596080125))) ^ uint200(1081526211186972801619033261976424837274117825596037486462046)) * uint200(1530633533856155893186663883074848607244145394413774352814519)) | uint200(573540330923425526526299026064578225713747259142403375617351)) / uint200(165260521181531341273164275198198897221955176087032289440188))))) / uint200(189685376029489344728980943674460774671794019079026980551207))) - uint200(969600201011279742265472998200996793073356291677346976153041)) & uint200(1451219709164397716771315920890114136418286450737139310719701)));
    }


    s1 -= --i1;
  }
  function f0() external
  { }
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
function f1(bytes4 i0,bytes3 i1,int240 i2,uint96 i3) 
{



}
pragma solidity >= 0.0.0;
import "su0.sol";
contract C1 is C0 {
  bytes31 s2;
  bytes24 s3;
  uint224 s4;
  constructor(uint200 i0,int64 i1,uint200 i2,int64 i3,bytes31 i4,bytes24 i5,uint224 i6) C0(uint200((i2 / (((++i2 | type(uint200).min) - uint200(((i0++ * --s0) / (i0 + --s0)))) % ++i2))), (i1++ - s1), (uint200(1555663903764525582923441554747089201157189808667516745257685) << (--i2 % (abi.decode(abi.encode(uint160(18997035185275142042842673342519125969823701570), ~(int112(889344860774038384217966507732884))), (uint200)) ^ (type(uint200).min + (uint200(1499817576066222169333968981365325988077126888817378516418204) % uint200(835556567060784146220562285169404856056648688437518138085321)))))), int64(1586712878958651141), bytes31(0xb3bac4b95f10bceb816fb9fef7ca0dee5e90c88246253c911ec18bd3acf76f), bytes24(0x4f757ed89ff787bd186958fbb94f86b12659a978ad7b5160), uint224(5535151318777492909199189196885627507530017428086561377546853423154))
  {
  }
  function f2(uint112 i0) external returns(int232 o0)
  { }
  function f3(bool i0,int56 i1) external returns(uint64 o0,bytes31 o1)
  {
    {
      f1(abi.decode("a4ef0af79c1f02fede", (bytes4)),bytes3(0x5f7d50),abi.decode("fd6a8a62f4414627ee675be23ef5ce7f1d0bd656912aed4b5f2b466a0073da3392", (int240)),(~(type(uint96).min) ** uint96(17686995359966568918848291624)));
      assert(abi.decode("24aabba0358f5daa9802c1518c4196a617632d834a32d9d131754b8972b8179d2a6a1ecaa6c450fc5f464797fc4b7be3", (bool)));
      (int216 l0, int256 l1, bytes21 l2, uint160 l3) = abi.decode(address(0x81f6b3b83bF40bC7245e3C21aB6F32f3DA40Bc82).code, (int216, int256, bytes21, uint160));
    }
  }
}
// ----
// TypeError 2973: (su1.sol:255-1003): Wrong argument count for modifier invocation: 7 arguments given but expected 2.
